Minor spacing fix

--- a/themes/bc/static/css/style.css
+++ b/themes/bc/static/css/style.css
@@ -878,9 +878,9 @@ a.announcelink {
 }
 
 .announcements div {
-    margin: 0 0 10px 0;
+    margin: 0 0 5px 0;
     display: inline-block;
-    padding: 0 0 15px 0;
+    padding: 0 0 0px 0;
 }
 
 .announcements .readmore, .announcements .readmore.yes {
